--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -28,6 +28,17 @@
             <ion-searchbar></ion-searchbar>
           </div>
 
+          <ion-row class="ion-padding">
+            <ion-col size="11">
+              <ion-searchbar></ion-searchbar>
+            </ion-col>
+            <ion-col size="1">
+              <ion-button style="margin-top: 0.8em;" size="default" expand="block" color="dark">
+                ค้นหา
+              </ion-button>
+            </ion-col>
+          </ion-row>
+
           <ion-row>
             <ion-col size="2">
               <ion-item>
