--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -17,11 +17,15 @@
       <ion-col size="1">
       </ion-col>
       <ion-col size="2.5">
-        <ion-img class="img-size" [src]=urlPhoto class="img-responsive" alt="Image"></ion-img>
+        <ion-img class="img-size"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRY9bMq4kHtIcAO8iHZVB_jXQlLI2QqSKUL7eyrg806X6Qd4Y5z&usqp=CAU"
+          class="img-responsive" alt="Image"></ion-img>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="1.7">
         <ion-item>
-          <ion-label>ข้อมูลผู้เข้าพักโรงแรม</ion-label>
+          <ion-label>
+            <h2>ข้อมูลผู้เข้าพักโรงแรม</h2>
+          </ion-label>
         </ion-item>
         <ion-item>
           <ion-label>ชื่อ-สกุล</ion-label>
@@ -35,25 +39,8 @@
         <ion-item>
           <ion-label>กรุ๊ป</ion-label>
         </ion-item>
-        <ion-item>
-          <ion-label>วันที่เข้า</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-label>วันที่ออก</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-label>ห้อง</ion-label>
-        </ion-item>
-        <ion-item class="ion-text-left">
-          <ion-label>ค่ามัดจัด</ion-label>
-          <ion-checkbox slot="start" checked="true"></ion-checkbox>
-        </ion-item>
-        <ion-item class="ion-text-left">
-          <ion-label>ใบกำกับภาษี</ion-label>
-          <ion-checkbox slot="start"></ion-checkbox>
-        </ion-item>
       </ion-col>
-      <ion-col size="6.5" class="ion-text-left">
+      <ion-col size="6.8" class="ion-text-left">
         <ion-item>
           <ion-label></ion-label>
         </ion-item>
@@ -67,37 +54,65 @@
           <ion-label>เงินสำรองจ่าย</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>กรุ๊ป</ion-label>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล">
+          </ion-input>
         </ion-item>
-       
-        <app-datetime [fg]="fg" formName="checkInDate" mode="date"></app-datetime>
-        <app-datetime [fg]="fg" formName="checkOutDate" mode="date"></app-datetime>
+      </ion-col>
+    </ion-row>
 
+    <ion-row>
+      <ion-col size="3.4">
+      </ion-col>
+      <ion-col size="8.6" class="ion-text-center">
+        <app-datetime [fg]="fg" formName="checkInDate" text="วันที่เข้า" mode="date"></app-datetime>
+        <app-datetime [fg]="fg" formName="checkOutDate" text="วันที่ออก" mode="date"></app-datetime>
+      </ion-col>
+    </ion-row>
 
-       
-        <ion-row>
-          <ion-col size="9">
-            <ion-item>
-              <ion-button color="light">
-                111
-              </ion-button>
-            </ion-item>
-          </ion-col>
-          <ion-col size="3">
-            <ion-item>
-              <!-- [class.invalid]="isValid('rooms')" -->
-              <ion-icon slot="end" (click)="selectRoomModal()" name="search-outline"></ion-icon>
-              <ion-icon slot="end" (click)="roomSetting()" name="settings-outline"></ion-icon>
-            </ion-item>
-          </ion-col>
-        </ion-row>
+    <ion-row>
+      <ion-col size="3.5">
+      </ion-col>
+      <ion-col size="1.7">
+        <ion-item>
+          <ion-label>ห้อง</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col size="3.8">
+        <ion-item>
+          <ion-button color="light">
+            111
+          </ion-button>
+        </ion-item>
+      </ion-col>
+      <ion-col size="3">
+        <ion-item>
+          <!-- [class.invalid]="isValid('rooms')" -->
+          <ion-icon slot="end" (click)="selectRoomModal()" name="search-outline"></ion-icon>
+          <ion-icon slot="end" (click)="roomSetting()" name="settings-outline"></ion-icon>
+        </ion-item>
+      </ion-col>
+    </ion-row>
 
+    <ion-row class="ion-padding">
+      <ion-col size="3.5">
+      </ion-col>
+      <ion-col size="2">
         <ion-item lines="none">
           <ion-button size="default" (click)="dataReservation()" slot="start" expand="block" type="submit">
             <ion-icon name="settings"></ion-icon>
             ข้อมูลการจอง
           </ion-button>
         </ion-item>
+        <ion-item class="ion-text-left">
+          <ion-label>ค่ามัดจัด</ion-label>
+          <ion-checkbox slot="start" checked="true"></ion-checkbox>
+        </ion-item>
+        <ion-item class="ion-text-left">
+          <ion-label>ใบกำกับภาษี</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+      </ion-col>
+      <ion-col size="6.5">
       </ion-col>
     </ion-row>
 
