--- a/PrompimanFront/src/global.scss
+++ b/PrompimanFront/src/global.scss
@@ -63,3 +63,43 @@
 .warning {
   color: darkorange;
 }
+
+table,
+td,
+th {
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 10px;
+  border: 1px solid lightgray;
+  text-align: center;
+}
+
+table {
+  width: 100%;
+  table-layout: auto;
+}
+
+.bgb {
+  background-color: #f8f9fa;
+}
+
+div[scrollx="true"],
+div[scrolly="true"] {
+  position: relative;
+  overflow: hidden;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+div[scrollx="true"] {
+  overflow-x: auto;
+}
+
+div[scrolly="true"] {
+  overflow-y: auto;
+}
