--- a/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
+++ b/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>MasterDetail</ion-title>
+    <ion-title>CheckinDetail</ion-title>
   </ion-toolbar>
 </ion-header>
 
