add alert in checkin

--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -126,6 +126,17 @@
       <ion-col size="5.5">
       </ion-col>
     </ion-row>
+
+    <ion-row class="ion-padding">
+      <ion-col size="5.5">
+      </ion-col>
+      <ion-col size="1">
+        <ion-button size="default" expand="block" type="submit" (click)="presentAlertConfirm()">
+          dialog</ion-button>
+      </ion-col>
+      <ion-col size="5.5">
+      </ion-col>
+    </ion-row>
   </ion-list>
   <!-- </form> -->
 </ion-content>
