--- a/PrompimanFront/src/app/cost-detail/cost-detail.page.html
+++ b/PrompimanFront/src/app/cost-detail/cost-detail.page.html
@@ -105,7 +105,7 @@
   <!-- </form> -->
 </ion-content>
 
-<ion-footer class="ion-padding">
+<ion-footer style="--ion-background-color: lightgrey;">
   <ion-toolbar>
     <ion-row>
       <ion-col size="2">
