edit validate idCard and change table pattern in checkin-Detail

--- a/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
+++ b/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-list lines="none">
     <ion-row>
       <ion-col size="2"></ion-col>
@@ -42,7 +42,7 @@
       <ion-col size="1"></ion-col>
     </ion-row>
 
-    <ion-row>
+    <!-- <ion-row>
       <ion-col size="1"> </ion-col>
       <ion-col>
         <div scrollX="true" scrollY="true" class="ion-no-padding">
@@ -70,6 +70,54 @@
         </div>
       </ion-col>
       <ion-col size="1"> </ion-col>
-    </ion-row>
+    </ion-row> -->
+  
+    <ion-card>
+      <ion-card-header>
+        <ion-row class="ion-text-left">
+          <ion-col size="1"></ion-col>
+          <ion-col size="2">
+            <h4>ห้อง</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>วันที่เข้าพัก</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>วันที่ออก</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>เงินค้างจ่าย</h4>
+          </ion-col>
+          <ion-col size="2">
+            <h4>สถานะ</h4>
+          </ion-col>
+          <ion-col size="1"></ion-col>
+        </ion-row>
+      </ion-card-header>
+    </ion-card>
+  
+    <ion-card>
+      <ion-card-content>
+          <ion-row class="ion-text-left">
+            <ion-col size="1"></ion-col>
+              <ion-col size="2" >
+                201
+              </ion-col>
+              <ion-col size="2">
+               12/05/2020
+              </ion-col>
+              <ion-col size="2" >
+                13/05/2020
+              </ion-col>
+              <ion-col size="2" >
+                500
+              </ion-col>
+              <ion-col size="2" >
+               เข้าพัก
+              </ion-col>
+              <ion-col size="1"></ion-col>
+            </ion-row>
+      </ion-card-content>
+    </ion-card>
   </ion-list>
 </ion-content>
