--- a/PrompimanFront/src/app/master-detail/master-detail.page.html
+++ b/PrompimanFront/src/app/master-detail/master-detail.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding">
   <ion-segment [(ngModel)]="option" (ionChange)="segmentChanged($event)">
     <ion-segment-button value="value1">
-      <ion-label>ยังไม่เปิด Master</ion-label>
+      <ion-label>ยังไม่ปิด Master</ion-label>
     </ion-segment-button>
     <ion-segment-button value="value2">
       <ion-label>checkout ยังมียอดเงินค้าง</ion-label>
