change page to follow global.scss

--- a/PrompimanFront/src/global.scss
+++ b/PrompimanFront/src/global.scss
@@ -103,3 +103,7 @@ div[scrollx="true"] {
 div[scrolly="true"] {
   overflow-y: auto;
 }
+
+.native-input.sc-ion-input-md{
+  background-color: lightgray;
+}
