--- a/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
+++ b/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
@@ -9,9 +9,9 @@
     <ion-row>
       <ion-col size="2"></ion-col>
       <ion-col>
-        <ion-img style="width: 150; height: 300px;" src="../../assets/image/user-silhouette.png" alt=""></ion-img>
+        <ion-img style="width: 150; height: 300px;" src="../../assets/image/prompiman.jpg" alt=""></ion-img>
       </ion-col>
-      <ion-col>
+      <ion-col size="6">
         <ion-item>
           <h2><b>ข้อมูลมาสเตอร์:&nbsp;&nbsp;&nbsp;&nbsp;ff</b></h2>
         </ion-item>
@@ -39,7 +39,7 @@
           </ion-button>
         </ion-item>
       </ion-col>
-      <ion-col size="1"></ion-col>
+      <!-- <ion-col size="1"></ion-col> -->
     </ion-row>
 
     <!-- <ion-row>
@@ -71,10 +71,10 @@
       </ion-col>
       <ion-col size="1"> </ion-col>
     </ion-row> -->
-  
+
     <ion-card>
       <ion-card-header>
-        <ion-row class="ion-text-left">
+        <ion-row class="ion-text-center">
           <ion-col size="1"></ion-col>
           <ion-col size="2">
             <h4>ห้อง</h4>
@@ -95,28 +95,48 @@
         </ion-row>
       </ion-card-header>
     </ion-card>
-  
+
     <ion-card>
       <ion-card-content>
-          <ion-row class="ion-text-left">
-            <ion-col size="1"></ion-col>
-              <ion-col size="2" >
+        <ion-row class="ion-text-center">
+          <ion-col size="1"></ion-col>
+          <ion-col size="2">
+            <ion-item class="ion-text-center">
+              <ion-label>
                 201
-              </ion-col>
-              <ion-col size="2">
-               12/05/2020
-              </ion-col>
-              <ion-col size="2" >
+              </ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="2">
+            <ion-item>
+              <ion-label style="text-align: center;">
+                12/05/2020
+              </ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="2">
+            <ion-item>
+              <ion-label style="text-align: center;">
                 13/05/2020
-              </ion-col>
-              <ion-col size="2" >
+              </ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="2">
+            <ion-item>
+              <ion-label style="text-align: center;">
                 500
-              </ion-col>
-              <ion-col size="2" >
-               เข้าพัก
-              </ion-col>
-              <ion-col size="1"></ion-col>
-            </ion-row>
+              </ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="2">
+            <ion-item color="primary">
+              <ion-label color="dark" style="text-align: center;">
+                เข้าพัก
+              </ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="1"></ion-col>
+        </ion-row>
       </ion-card-content>
     </ion-card>
   </ion-list>
