--- a/PrompimanFront/src/global.scss
+++ b/PrompimanFront/src/global.scss
@@ -103,3 +103,10 @@ div[scrollx="true"] {
 div[scrolly="true"] {
   overflow-y: auto;
 }
+
+.dialog-modal-4-ch-re-mm .modal-wrapper {
+  width: 70%;
+  height: 95%;
+  position: relative;
+  display: block;
+}
