--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -115,7 +115,7 @@
         <ion-col size="10">
           <ion-item>
             <label>
-              {{listdataReservation.reserve}}
+              {{listdataReservation.reserve | number }}
             </label>
           </ion-item>
         </ion-col>
@@ -224,7 +224,7 @@
         <ion-col size="10">
           <ion-item>
             <label>
-              {{listdataReservation.reserve}}
+              {{listdataReservation.reserve | number }}
             </label>
           </ion-item>
         </ion-col>        
