--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-list lines="none">
     <ion-item lines="none">
       <ion-button size="default" (click)="dataMember()" slot="end" expand="block" type="submit">
