--- a/PrompimanFront/src/app/cost-detail/cost-detail.page.html
+++ b/PrompimanFront/src/app/cost-detail/cost-detail.page.html
@@ -65,47 +65,47 @@
     <ion-row>
       <ion-item-divider>
         <ion-col>
-        <h5>ห้อง {{201}}</h5>
-        <ion-item>
-          <ion-label>ค่าห้อง 600</ion-label>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-        </ion-item>
-        <ion-item>
-          <ion-label>อาหารเช้า 120</ion-label>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-        </ion-item>
-        <ion-item>
-          <ion-label>เสริมเตียง 100</ion-label>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-        </ion-item>
-      </ion-col>
-    </ion-item-divider>
+          <h5>ห้อง {{201}}</h5>
+          <ion-item>
+            <ion-label>ค่าห้อง 600</ion-label>
+            <ion-checkbox slot="start" value="true"></ion-checkbox>
+          </ion-item>
+          <ion-item>
+            <ion-label>อาหารเช้า 120</ion-label>
+            <ion-checkbox slot="start" value="true"></ion-checkbox>
+          </ion-item>
+          <ion-item>
+            <ion-label>เสริมเตียง 100</ion-label>
+            <ion-checkbox slot="start" value="true"></ion-checkbox>
+          </ion-item>
+        </ion-col>
+      </ion-item-divider>
     </ion-row>
     <ion-row>
       <ion-item-divider>
-        <ion-col >
-        <h5>ห้อง {{202}}</h5>
-        <ion-item>
-          <ion-label>ค่าห้อง 600</ion-label>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-        </ion-item>
-        <ion-item>
-          <ion-label>อาหารเช้า 120</ion-label>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-        </ion-item>
-        <ion-item>
-          <ion-label>เสริมเตียง 100</ion-label>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-        </ion-item>
-      </ion-col>
-    </ion-item-divider>
+        <ion-col>
+          <h5>ห้อง {{202}}</h5>
+          <ion-item>
+            <ion-label>ค่าห้อง 600</ion-label>
+            <ion-checkbox slot="start" value="true"></ion-checkbox>
+          </ion-item>
+          <ion-item>
+            <ion-label>อาหารเช้า 120</ion-label>
+            <ion-checkbox slot="start" value="true"></ion-checkbox>
+          </ion-item>
+          <ion-item>
+            <ion-label>เสริมเตียง 100</ion-label>
+            <ion-checkbox slot="start" value="true"></ion-checkbox>
+          </ion-item>
+        </ion-col>
+      </ion-item-divider>
     </ion-row>
 
   </ion-list>
   <!-- </form> -->
 </ion-content>
 
-<ion-footer style="--ion-background-color: lightgrey;">
+<ion-footer style="--ion-background-color:#f5f2ea;">
   <ion-toolbar>
     <ion-row>
       <ion-col size="2">
@@ -118,6 +118,7 @@
         <ion-item lines="none">บาท</ion-item>
       </ion-col>
     </ion-row>
+
     <ion-row>
       <ion-col size="2">
         <ion-item lines="none">ยอดที่ชำระแล้ว</ion-item>
@@ -128,6 +129,29 @@
       <ion-col size="2">
         <ion-item lines="none">บาท</ion-item>
       </ion-col>
+      <ion-col size="1.2"></ion-col>
+      <ion-col size="2.5">
+        <ion-item lines="none" style="color: red;" >
+          <h3>
+            ยอดที่เลือกชำระ
+          </h3>
+        </ion-item>
+      </ion-col>
+      <ion-col size="1.5">
+        <ion-item lines="none" style="color: red;">
+          <h3>
+            5000
+          </h3>
+        </ion-item>
+      </ion-col>
+      <ion-col size="1">
+        <ion-item lines="none" style="color: red;">
+          <h3>
+            บาท
+          </h3>
+        </ion-item>
+      </ion-col>
+      <!-- <ion-col size="1"></ion-col> -->
     </ion-row>
 
     <ion-row>
@@ -140,36 +164,11 @@
       <ion-col size="2">
         <ion-item lines="none">บาท</ion-item>
       </ion-col>
-      <ion-col size="2.5">
-        <ion-item lines="none" style="color: red;">
-          <h3>
-            ยอดที่เลือกชำระ
-          </h3>
-        </ion-item>
-      </ion-col>
-      <ion-col size="1.5">
-        <ion-item lines="none" style="color: red;"> 
-          <h3>
-            xxxxxddd
-          </h3>
-        </ion-item>
-      </ion-col>
+      <ion-col size="4"></ion-col>
       <ion-col size="2">
-        <ion-item lines="none" style="color: red;">
-          <h3>
-            บาท
-          </h3>
-        </ion-item>
-      </ion-col>
-
-      <ion-col size="1">
         <ion-button expand="block" color="primary" class="ion-text-end" type="">ถัดไป</ion-button>
       </ion-col>
+      <ion-col size="1"></ion-col>
     </ion-row>
   </ion-toolbar>
 </ion-footer>
-
-<!-- <ion-footer>
-  <ion-button  type="submit"  ion-button expand="full"
-    no-margin>ถัดไป</ion-button>
-</ion-footer> -->
