implement ui checkout && extra

--- a/PrompimanFront/src/app/checkout/checkout.page.html
+++ b/PrompimanFront/src/app/checkout/checkout.page.html
@@ -4,6 +4,55 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-row class="ion-padding">
+    <ion-col size="11">
+      <ion-searchbar></ion-searchbar>
+    </ion-col>
+    <ion-col size="1">
+      <ion-button style="margin-top: 0.8em;" size="default" expand="block" color="dark">
+        ค้นหา
+      </ion-button>
+    </ion-col>
+  </ion-row>
 
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="ion-text-center">
+        <ion-col size="1">
+        </ion-col>
+        <ion-col size="2">
+          <h4>เลขห้อง</h4>
+        </ion-col>
+        <ion-col size="1">
+        </ion-col>
+        <ion-col size="4">
+          <h4>ชื่อ - สกุล(Master)</h4>
+        </ion-col>
+        <ion-col size="4">
+          <h4>เบอร์โทรศัพท์</h4>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-item lines="none" class="ion-text-center">
+        <ion-col size="1">
+        </ion-col>
+        <ion-col size="2">
+          275
+        </ion-col>
+        <ion-col size="1">
+        </ion-col>
+        <ion-col size="4">
+          tatae999 นะจ๊ะ
+        </ion-col>
+        <ion-col size="4">
+          0221223522
+        </ion-col>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
