--- a/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
+++ b/PrompimanFront/src/app/checkin-detail/checkin-detail.page.html
@@ -129,7 +129,7 @@
             </ion-item>
           </ion-col>
           <ion-col size="2">
-            <ion-item color="primary">
+            <ion-item [color]="setColor('เข้าพัก')">
               <ion-label color="dark" style="text-align: center;">
                 เข้าพัก
               </ion-label>
