--- a/PrompimanFront/src/app/extra/extra.page.html
+++ b/PrompimanFront/src/app/extra/extra.page.html
@@ -23,14 +23,14 @@
       <ion-col size="2">
         <ion-item>
           <!-- <ion-label style="color: darkgrey;">กรุณาเลือก</ion-label> -->
-          <ion-select interface="action-sheet">
+          <ion-select interface="action-sheet"  [(ngModel)]="carbrand" (ionChange)="onChange(carbrand)">
             <ion-select-option value="1">1</ion-select-option>
             <ion-select-option value="2">2</ion-select-option>
             <ion-select-option value="3">3</ion-select-option>
             <ion-select-option value="4">4</ion-select-option>
-            <ion-select-option value="1">5</ion-select-option>
-            <ion-select-option value="2">6</ion-select-option>
-            <ion-select-option value="3">7</ion-select-option>
+            <ion-select-option value="5">5</ion-select-option>
+            <ion-select-option value="6">6</ion-select-option>
+            <ion-select-option value="7">7</ion-select-option>
           </ion-select>
         </ion-item>
       </ion-col>
@@ -50,13 +50,13 @@
         <ion-item>
           <!-- <ion-label style="color: darkgrey;">กรุณาเลือก</ion-label> -->
           <ion-select interface="action-sheet">
-            <ion-select-option value="1">111</ion-select-option>
-            <ion-select-option value="2">222</ion-select-option>
-            <ion-select-option value="3">333</ion-select-option>
-            <ion-select-option value="4">444</ion-select-option>
-            <ion-select-option value="1">555</ion-select-option>
-            <ion-select-option value="2">666</ion-select-option>
-            <ion-select-option value="3">777</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 1">111</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 2">222</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 3">333</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 4">444</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 5">555</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 6">666</ion-select-option>
+            <ion-select-option *ngIf="dataValue == 7">777</ion-select-option>
           </ion-select>
         </ion-item>
       </ion-col>
@@ -150,4 +150,5 @@
       </ion-row>
     </ion-card-header>
   </ion-card>
+ 
 </ion-content>
