--- a/PrompimanFront/src/app/cost-detail/cost-detail.page.html
+++ b/PrompimanFront/src/app/cost-detail/cost-detail.page.html
@@ -18,51 +18,14 @@
       </ion-col>
       <ion-col size="3">
         <ion-item>
-          <ion-checkbox slot="start" value="true"></ion-checkbox>
-          <ion-label>เลือกทั้งหมด</ion-label>
+          <ion-checkbox slot="start" [(ngModel)]="masterCheck"
+          (click)="checkMaster($event)"></ion-checkbox>
+          <ion-label><strong>เลือกทั้งหมด</strong></ion-label>
         </ion-item>
       </ion-col>
     </ion-row>
 
-    <!-- <ion-row>
-      <ion-col size="0.5"></ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-label><b>ห้อง {{201}}</b></ion-label>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="2"></ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-label>ค่าห้อง 600</ion-label>
-          <ion-checkbox slot="start" value="true">
-          </ion-checkbox>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="2"></ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-label>อาหารเช้า 120</ion-label>
-          <ion-checkbox slot="start" value="true">
-          </ion-checkbox>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="2"></ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-label>เสริมเตียง 100</ion-label>
-          <ion-checkbox slot="start" value="true">
-          </ion-checkbox>
-        </ion-item>
-      </ion-col>
-    </ion-row> -->
-    <ion-row *ngFor="let item of allRoom">
+    <ion-row *ngFor="let item of checkBoxList">
       <ion-item-divider>
         <ion-col>
           <h5>ห้อง {{ item.room }}</h5>
@@ -76,7 +39,7 @@
               <ion-label>{{ item2.price }}</ion-label>
             </ion-col>
 
-            <ion-checkbox slot="start" ></ion-checkbox>
+            <ion-checkbox slot="start" checked="{{ item2.isChecked }}" (ionChange)="checkEvent($event)"></ion-checkbox>
             <!-- Todo: add in checkbox (ionChange)="change(item2, item.room)" -->
           </ion-item>
         </ion-col>
