--- a/PrompimanFront/src/app/rooms/rooms.page.html
+++ b/PrompimanFront/src/app/rooms/rooms.page.html
@@ -4,6 +4,104 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <!-- <app-datetime></app-datetime> -->
+<ion-content class="ion-padding">
+  <ion-segment [(ngModel)]="option" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="value1">
+      <ion-label>ooo</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="value2">
+      <ion-label>eut</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <ng-container [ngSwitch]="option" class="ion-padding">
+    <ng-container *ngSwitchCase="'value1'" class="ion-padding">
+      <ion-list class="ion-padding">
+        <ion-card>
+          <ion-card-header>
+            <ion-row class="ion-text-center">
+              <ion-col size="2">
+                <h4>ห้อง</h4>
+              </ion-col>
+              <ion-col size="5">
+                <h4>ปัญหาการแจ้งซ่อม</h4>
+              </ion-col>
+              <ion-col size="3">
+                <h4>สถานะ</h4>
+              </ion-col>
+              <ion-col size="2">
+              </ion-col>
+            </ion-row>
+          </ion-card-header>
+        </ion-card>
+
+        <ion-card>
+          <ion-card-content>
+            <ion-item lines="none"> 
+              <ion-col size="10">
+                <ion-item lines="none" >
+                  <ion-col size="1.7"  class="ion-text-center">
+                    101
+                  </ion-col>
+                  <ion-col size="7.3"  class="ion-text-center">
+                    5555
+                  </ion-col>
+                  <ion-col size="3"  class="ion-text-center">
+                    ยังไม่ได้ซ่อม
+                  </ion-col>
+                </ion-item>
+              </ion-col>
+              <ion-col size="2">
+                <ion-button color="medium" size="default" expand="block" disabled="true">ซ่อมแล้ว</ion-button>
+              </ion-col>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+      </ion-list>
+    </ng-container>
+
+
+
+    <ng-container *ngSwitchCase="'value2'" class="ion-padding">
+      <ion-list class="ion-padding">
+        <ion-card>
+          <ion-card-header>
+            <ion-row class="ion-text-center">
+              <ion-col size="2">
+                <h4>ห้อง</h4>
+              </ion-col>
+              <ion-col size="4">
+                <h4>ผู้บริหาร</h4>
+              </ion-col>
+              <ion-col size="4">
+                <h4>วันที่เข้าพัก</h4>
+              </ion-col>
+              <ion-col size="2">
+                <h4>ซ่อมแล้ว</h4>
+              </ion-col>
+            </ion-row>
+          </ion-card-header>
+        </ion-card>
+
+        <ion-card>
+          <ion-card-header>
+            <ion-row class="ion-text-center">
+              <ion-col size="2">
+                ห้อง
+              </ion-col>
+              <ion-col size="4">
+                ผู้บริหาร
+              </ion-col>
+              <ion-col size="4">
+                วันที่เข้าพัก
+              </ion-col>
+              <ion-col size="2">
+                ซ่อมแล้ว
+              </ion-col>
+            </ion-row>
+          </ion-card-header>
+        </ion-card>
+      </ion-list>
+    </ng-container>
+  </ng-container>
 </ion-content>
